# mind-map

./: Cargo.toml  README.md  index.html  setup.sh
.claude/: app.mdc  mind_map.mdc  node.mdc  project-context.mdc  settings.local.json
.github/workflows/: deploy.yml
docs/: README.md  app.md  architecture.md  file-roles.md  mind_map.md  node.md
scripts/: app.js  event-handlers.js  ui-controller.js  utils.js
src/: app.rs  lib.rs  mind_map.rs  node.rs
styles/: main.css
