[package]
name = "mind_map"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "MouseEvent",
    "KeyboardEvent",
    "HtmlInputElement",
] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
